Java changes for Stream and recursion